[BUGFIX] .htaccess compatibility for Apache ≥ v2.3

--- a/.htaccess
+++ b/.htaccess
@@ -13,12 +13,30 @@
 
 # protect database
 <FilesMatch data.db>
-    Order allow,deny
-    Deny from all
+    # Apache < 2.3
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+        Satisfy All
+    </IfModule>
+
+    # Apache ≥ 2.3
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
 </FilesMatch>
 
 # protect schema
 <FilesMatch schema.sql>
-    Order allow,deny
-    Deny from all
+    # Apache < 2.3
+    <IfModule !mod_authz_core.c>
+        Order allow,deny
+        Deny from all
+        Satisfy All
+    </IfModule>
+
+    # Apache ≥ 2.3
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
 </FilesMatch>
