--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 *.*~
-#*.*
 .DS_Store
 pkg
-*.sublime-project
-*.sublime-workspace
 tests/work
 tests/data
 .vagrant*
@@ -12,5 +9,4 @@ composer.phar
 .idea
 *.iml
 .kobalt
-api/
-client/
+node_modules
