--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,19 @@
 {
-	"require": {
-		"dflydev/markdown": "1.0.2",
-	    "slim/slim": "2.4.3",
-    	"slim/views": "0.1.2",
-    	"swiftmailer/swiftmailer": "5.0.1",
-      "twig/twig": "1.16.0",
-	  "aura/auth": "2.x-dev",
-      "aura/session": "2.0.1",
-      "ircmaxell/password-compat": "v1.0.4"
-  	},
-  	"require-dev": {
-      "simpletest/simpletest": "^1.1"
+    "require": {
+        "dflydev/markdown": "1.0.2",
+        "slim/slim": "2.4.3",
+        "slim/views": "0.1.2",
+        "swiftmailer/swiftmailer": "5.0.1",
+        "twig/twig": "1.16.0",
+        "aura/auth": "2.x-dev",
+        "aura/session": "2.0.1",
+        "ircmaxell/password-compat": "v1.0.4"
+    },
+    "require-dev": {
+        "simpletest/simpletest": "^1.1"
+    },
+    "scripts": {
+        "genl10n": "yarn genl10n",
+        "package": "yarn package"
     }
 }
