--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "require": {
-        "php": ">=7.2.0",
+        "php": ">=7.4.0",
         "ext-json": "*",
         "ext-pdo": "*",
+        "ext-gd": "*",
         "ext-xmlwriter": "*",
         "slim/slim": "^4.6.0",
         "slim/psr7": "^1.3.0",
@@ -14,7 +15,8 @@
         "aura/auth": "^4.0.2",
         "ircmaxell/password-compat": "^v1.0.4",
         "aura/accept": "^2.2",
-        "akrabat/proxy-detection-middleware": "^0.4.0"
+        "akrabat/proxy-detection-middleware": "^0.4.0",
+        "slim/http-cache": "^1.0"
     },
     "require-dev": {
         "simpletest/simpletest": "^v1.2.0",
