--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
         "ext-gd": "*",
         "ext-xmlwriter": "*",
         "slim/slim": "^4.6.0",
-        "slim/psr7": "^1.3.0",
         "php-di/php-di": "^6.3.0",
         "slim/twig-view": "^3.0",
         "swiftmailer/swiftmailer": "5.0.1",
@@ -16,7 +15,9 @@
         "ircmaxell/password-compat": "^v1.0.4",
         "aura/accept": "^2.2",
         "akrabat/proxy-detection-middleware": "^0.4.0",
-        "slim/http-cache": "^1.0"
+        "slim/http-cache": "^1.0",
+        "guzzlehttp/psr7": "^1.7",
+        "http-interop/http-factory-guzzle": "^1.0"
     },
     "require-dev": {
         "simpletest/simpletest": "^v1.2.0",
