--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: docker
     #image: php:7-apache
     working_dir: /var/www/html
-    command: php -d date.timezone=Europe/Berlin -S 0.0.0.0:8081 -t public
+    command: "php -d date.timezone=Europe/Berlin -S 0.0.0.0:8081 -t public"
     user: 1000:1000
     environment:
       docker: "true"
@@ -14,8 +14,6 @@ services:
     volumes:
       - ./work/www:/var/www/html
       - ./work/lib:/mnt
-      - ./work/logs:/var/logs
-      - ./work/cache:/var/cache
 #  bbs-fpm:
 #    image: php:7-fpm
 #    working_dir: /var/www
