Added CSS and JS

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
 *.*~
 .DS_Store
-pkg
-tests/work
-tests/data
-screenshot*
-composer.phar
 .idea
+.phpunit.result.cache
 *.iml
-.kobalt
-node_modules
 *.log
+dist
+node_modules
 work
-worklib
-/.phpunit.result.cache
 vendor
