--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "dependencies": {
+    "autoprefixer": "^10.1.0",
+    "tailwindcss": "^2.0.1"
   },
   "scripts": {
     "genl10n": "node scripts/genl10n.js assets/l10n/messages.yml lib/BicBucStriim",
-    "package": "node scripts/package.js"
+    "package": "node scripts/package.js",
+    "serve": "cross-env NODE_ENV=development concurrently \"postcss assets/style/style.css -o dist/style/style.css --watch\"",
+    "development": "cross-env NODE_ENV=development postcss assets/style/style.css -o dist/style/style.css",
+    "production": "cross-env NODE_ENV=production postcss assets/style/style.css -o dist/style/style.css"
   },
   "devDependencies": {
-    "read-yaml": "^1.1.0",
-    "adm-zip": "^0.5.1"
+    "adm-zip": "^0.5.1",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^4.1.10",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.0",
+    "postcss-import": "^13.0.0",
+    "read-yaml": "^1.1.0"
   }
 }
