Add support for .env files

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "slim/http-cache": "^1.0",
         "guzzlehttp/psr7": "^1.7",
         "http-interop/http-factory-guzzle": "^1.0",
-        "middlewares/trailing-slash": "^2.0"
+        "middlewares/trailing-slash": "^2.0",
+        "vlucas/phpdotenv": "^5.2"
     },
     "require-dev": {
         "ext-simplexml": "*",
