--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "tailwindcss-truncate-multiline": "^1.0.3"
   },
   "scripts": {
     "genl10n": "node scripts/genl10n.js assets/l10n/messages.yml src/Domain/BicBucStriim",
