Define all required modules in composer.json
"composer check-platform-reqs" can be used to verify
if all PHP extensions are installed.

installcheck.php now uses composer.json to obtain the list of required
PHP extensions, so there is only one source of truth.

Resolves: https://github.com/rvolz/BicBucStriim/issues/301

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,18 @@
 {
+    "name": "rvolz/bicbucstriim",
+    "description": "BicBucStriim streams books, digital books. It fills a gap in the functionality of current NAS devices that provide access to music, videos and photos -- but not books. BicBucStriim fills this gap and provides web-based access to your e-book collection. ",
+    "license": "MIT",
     "require": {
         "php": ">=7.4.0",
         "ext-dom": "*",
         "ext-json": "*",
-        "ext-pdo": "*",
         "ext-gd": "*",
         "ext-intl": "*",
+        "ext-pdo": "*",
+        "ext-pdo_sqlite": "*",
+        "ext-session": "*",
+        "ext-sqlite3": "*",
+        "ext-xml": "*",
         "ext-xmlwriter": "*",
         "ext-zip": "*",
         "slim/slim": "^4.6.0",
