--- a/composer.json
+++ b/composer.json
@@ -18,28 +18,28 @@
         "slim/slim": "^4.6.0",
         "php-di/php-di": "^6.3.0",
         "slim/twig-view": "^3.0",
-        "swiftmailer/swiftmailer": "5.0.1",
+        "swiftmailer/swiftmailer": "^6.3",
         "gabordemooij/redbean": "^v5.6.2",
         "monolog/monolog": "^2.1.1",
         "aura/auth": "^4.0.2",
         "ircmaxell/password-compat": "^v1.0.4",
-        "aura/accept": "^2.2",
-        "akrabat/proxy-detection-middleware": "^0.4.0",
+        "aura/accept": "^4.0",
+        "akrabat/proxy-detection-middleware": "^1.0",
         "slim/http-cache": "^1.0",
-        "guzzlehttp/psr7": "^1.7",
+        "guzzlehttp/psr7": "^2.4",
         "http-interop/http-factory-guzzle": "^1.0",
         "middlewares/trailing-slash": "^2.0",
-        "anyascii/anyascii": "^0.1.7",
-        "dflydev/fig-cookies": "^2.0",
-        "firebase/php-jwt": "^5.2"
+        "anyascii/anyascii": "^0.3",
+        "dflydev/fig-cookies": "^3.0",
+        "firebase/php-jwt": "^6.4"
     },
     "require-dev": {
         "ext-simplexml": "*",
-        "simpletest/simpletest": "^v1.2.0",
+        "simpletest/simpletest": "dev-main",
         "phpunit/phpunit": "^8.5.7",
-        "nategood/httpful": "^0.2.19",
+        "nategood/httpful": "^0.3",
         "phpstan/phpstan": "^0.12.58",
-        "slim/psr7": "^1.3"
+        "slim/psr7": "^1.6"
     },
     "scripts": {
         "genl10n": "yarn genl10n",
