--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
         "ext-xml": "*",
         "ext-xmlwriter": "*",
         "ext-zip": "*",
-        "slim/slim": "^4.6.0",
-        "php-di/php-di": "^6.3.0",
+        "slim/slim": "^4.6",
+        "php-di/php-di": "^6.4",
         "slim/twig-view": "^3.0",
         "swiftmailer/swiftmailer": "^6.3",
-        "gabordemooij/redbean": "^v5.6.2",
-        "monolog/monolog": "^2.1.1",
-        "aura/auth": "^4.0.2",
-        "ircmaxell/password-compat": "^v1.0.4",
+        "gabordemooij/redbean": "^v5.7",
+        "monolog/monolog": "^2.9",
+        "aura/auth": "^4.0",
+        "ircmaxell/password-compat": "^v1.0",
         "aura/accept": "^4.0",
         "akrabat/proxy-detection-middleware": "^1.0",
         "slim/http-cache": "^1.0",
@@ -31,14 +31,15 @@
         "middlewares/trailing-slash": "^2.0",
         "anyascii/anyascii": "^0.3",
         "dflydev/fig-cookies": "^3.0",
-        "firebase/php-jwt": "^6.4"
+        "firebase/php-jwt": "^6.4",
+        "league/fractal": "^0.20"
     },
     "require-dev": {
         "ext-simplexml": "*",
         "simpletest/simpletest": "dev-main",
-        "phpunit/phpunit": "^8.5.7",
+        "phpunit/phpunit": "^9.6",
         "nategood/httpful": "^0.3",
-        "phpstan/phpstan": "^0.12.58",
+        "phpstan/phpstan": "^1.8",
         "slim/psr7": "^1.6"
     },
     "scripts": {
