--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,12 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
 
-	# Tell PHP that the mod_rewrite module is ENABLED.
+    # Tell PHP that the mod_rewrite module is ENABLED.
     SetEnv HTTP_MOD_REWRITE On
 
     RewriteEngine On
+    RewriteRule ^index\.php/((img|js|style)/.*)$ $1 [L]
+    RewriteRule ^index\.php/(data/(titles|authors)/.*\.png)$ $1 [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php [QSA,L]
