--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,11 +1,6 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Function title_forbidden invoked with 1 parameter, 3 required\\.$#"
-			count: 1
-			path: src/Application/Actions/Statics/ViewTitleFile.php
-
-		-
 			message: "#^Call to an undefined method Psr\\\\Container\\\\ContainerInterface\\:\\:set\\(\\)\\.$#"
 			count: 5
 			path: src/Application/Middleware/AuthMiddleware.php
@@ -42,7 +37,7 @@ parameters:
 
 		-
 			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$id\\.$#"
-			count: 4
+			count: 3
 			path: src/Domain/BicBucStriim/BicBucStriim.php
 
 		-
@@ -62,11 +57,6 @@ parameters:
 
 		-
 			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$ownNote\\.$#"
-			count: 1
-			path: src/Domain/BicBucStriim/BicBucStriim.php
-
-		-
-			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$url\\.$#"
 			count: 1
 			path: src/Domain/BicBucStriim/BicBucStriim.php
 
@@ -171,16 +161,6 @@ parameters:
 			path: src/Domain/Calibre/Calibre.php
 
 		-
-			message: "#^Access to an undefined property App\\\\Domain\\\\Calibre\\\\Item\\:\\:\\$ctr\\.$#"
-			count: 3
-			path: src/Domain/Calibre/Calibre.php
-
-		-
-			message: "#^Access to an undefined property App\\\\Domain\\\\Calibre\\\\Item\\:\\:\\$initial\\.$#"
-			count: 3
-			path: src/Domain/Calibre/Calibre.php
-
-		-
 			message: "#^Access to an undefined property object\\:\\:\\$addInfo\\.$#"
 			count: 2
 			path: src/Domain/Calibre/Calibre.php
@@ -192,6 +172,16 @@ parameters:
 
 		-
 			message: "#^Call to an undefined method DOMNode\\:\\:attr\\(\\)\\.$#"
+			count: 4
+			path: src/Domain/Epub/EPub.php
+
+		-
+			message: "#^Call to an undefined method DOMNode\\:\\:delete\\(\\)\\.$#"
+			count: 1
+			path: src/Domain/Epub/EPub.php
+
+		-
+			message: "#^Call to an undefined method DOMNode\\:\\:setAttribute\\(\\)\\.$#"
 			count: 1
 			path: src/Domain/Epub/EPub.php
 
@@ -201,14 +191,34 @@ parameters:
 			path: src/Domain/Opds/OpdsGenerator.php
 
 		-
-			message: "#^Cannot access property \\$languages on array\\.$#"
+			message: "#^Access to private property App\\\\Domain\\\\User\\\\User\\:\\:\\$languages\\.$#"
 			count: 1
 			path: src/helpers.php
 
 		-
-			message: "#^Cannot access property \\$tags on array\\.$#"
+			message: "#^Access to private property App\\\\Domain\\\\User\\\\User\\:\\:\\$tags\\.$#"
 			count: 1
 			path: src/helpers.php
+
+		-
+			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$id\\.$#"
+			count: 1
+			path: tests/Domain/BicBucStriim/BicBucStriimTest.php
+
+		-
+			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$mime\\.$#"
+			count: 1
+			path: tests/Domain/BicBucStriim/BicBucStriimTest.php
+
+		-
+			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$ntext\\.$#"
+			count: 1
+			path: tests/Domain/BicBucStriim/BicBucStriimTest.php
+
+		-
+			message: "#^Access to an undefined property RedBeanPHP\\\\OODBBean\\:\\:\\$ntype\\.$#"
+			count: 1
+			path: tests/Domain/BicBucStriim/BicBucStriimTest.php
 
 		-
 			message: "#^Access to an undefined property App\\\\Domain\\\\Calibre\\\\Book\\:\\:\\$title\\.$#"
