--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "dependencies": {
-  },
   "scripts": {
     "genl10n": "node scripts/genl10n.js assets/l10n/messages.yml lib/BicBucStriim",
     "package": "node scripts/package.js"
   },
   "devDependencies": {
-    "read-yaml": "^1.1.0",
-    "adm-zip": "^0.5.1"
+    "adm-zip": "^0.5.1",
+    "read-yaml": "^1.1.0"
   }
 }
