put image name in docker compose files

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,5 +1,6 @@
 services:
   dev:
+    image: mikespub/rvolz-bicbucstriim:dev
     build:
       context: . 
       dockerfile: docker/Dockerfile.php82
